# custom_msg_cpp

./: CMakeLists.txt  package.xml
msg/: custom.msg
src/: custom_script.cpp
